--- a/RSTK.csproj
+++ b/RSTK.csproj
@@ -56,6 +56,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>RSTK.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="INIFileParser, Version=2.3.0.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
       <HintPath>packages\ini-parser.2.3.0\lib\net20\INIFileParser.dll</HintPath>
@@ -100,6 +103,7 @@
     <None Include="Resources\rstk_waiting_icon.ico" />
     <None Include="Resources\rstk_64.png" />
     <None Include="Resources\rstk_waiting_64.png" />
+    <None Include="RSTK.manifest" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Folder-Open-24.png" />
