--- a/RSTK.csproj
+++ b/RSTK.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="IniExtensions.cs" />
     <Compile Include="RSTKForm.cs">
       <SubType>Form</SubType>
